@@ -1,3 +1,8 @@
+Tue Apr 17 21:41:11 2001  Jeffrey A Law  (law@cygnus.com)
+
+	* jump.c (mark_all_labels): Canonicalize the tail recursion
+	label attached to CALL_PLACEHOLDER insns.
+
 2001-04-17  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* output.h (dump_flow_info, free_basic_block_vars,
